# geometry-playground

./: CMakeLists.txt  README.md  makewiffle.c  paulslib.c  paulslib.h
arc_length_para/: README.md  arc_length_parameterization.py
donut/: Makefile  README.md  donut.c
fast-quadric/: CMakeLists.txt  Main.cpp  README.md  Simplify.h
plain-knit-yarn/: CMakeLists.txt
plain-knit-yarn/code/: make.bat
plain-knit-yarn/plot_curve/: plot_curve.py
plot/: add_matcap.py
pmp-data/off/: elephant.off
